[package]
name = "rgpu"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
# rlib => Rust static lib, for running wgpu in desktop environments
# cdylib => C/C++ compatible library, to create the wasm for the browser

[dependencies]
cfg-if = "1"
winit = { version = "0.29", features = ["rwh_05"] }
env_logger = "0.10"
log = "0.4"
wgpu = "0.19.3"
[target.'cfg(target_arch = "wasm32")'.dependencies] 
# Only include the following deps if targeting wasm32
console_error_panic_hook = "0.1.6" # Sends errors from panic! to console.
console_log = "1.0"
wgpu = { version = "0.19", features = ["webgl"]} 
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}